COF-12 | fix alignment issues on about us page, put conditional statement for the slider title on homepage slider

--- a/wp-content/themes/cofoss/resources/styles/components/_typography.scss
+++ b/wp-content/themes/cofoss/resources/styles/components/_typography.scss
@@ -195,3 +195,6 @@ h6 {
   line-height: 0.85rem;
   font-size: 14px;
 }
+.italic{
+  font-style: italic;
+}
