--- a/wp-content/themes/cofoss/resources/styles/layouts/_page-content.scss
+++ b/wp-content/themes/cofoss/resources/styles/layouts/_page-content.scss
@@ -202,6 +202,9 @@
     }
     .col2-layout{
         .col2-texts{
+            position: relative;
+            top: 10px;
+            padding-left: 0;
             .col-2-title{
                 font-size: 38px;
                 color: #44B063;
@@ -289,6 +292,10 @@
         } 
         .col2-layout{
             .col2-texts{
+                position: relative;
+                top: 50%;
+                transform: translateY(-50%);
+                padding-left: 50px;
                 .col-2-title{
                     font-size: 46px;
                 }
